--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "a92dcc59",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "6712741d",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1322,7 @@
        "4    16:50         21:35   4h 45m      1 stop         No info  13302  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "29a9c09d",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "10682         No info  11753  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "2b86ddcd",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "d97f4fda",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1525,7 @@
        "220"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "cacde1ec",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "f4032f6a",
    "metadata": {},
    "outputs": [],
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "14c0646b",
    "metadata": {},
    "outputs": [
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "53498ab1",
    "metadata": {},
    "outputs": [],
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "5d58bd99",
    "metadata": {},
    "outputs": [],
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "bc92a768",
    "metadata": {},
    "outputs": [
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "0b873ef1",
    "metadata": {},
    "outputs": [
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "a0956107",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "d8bd71f8",
    "metadata": {},
    "outputs": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "ca5dfcd0",
    "metadata": {},
    "outputs": [
@@ -1904,7 +1904,7 @@
        "[10462 rows x 6 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "c94ccf22",
    "metadata": {},
    "outputs": [],
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "id": "089f6666",
    "metadata": {},
    "outputs": [],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "id": "d79dd1eb",
    "metadata": {},
    "outputs": [
@@ -1967,7 +1967,7 @@
        "Name: Total_Stops, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "id": "21f5c9d2",
    "metadata": {},
    "outputs": [],
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "id": "a4e658e9",
    "metadata": {},
    "outputs": [],
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "id": "f8a890bb",
    "metadata": {},
    "outputs": [
@@ -2021,7 +2021,7 @@
        "Name: Airline, dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "966f712c",
    "metadata": {},
    "outputs": [],
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3ec604bf",
    "metadata": {},
    "outputs": [],
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "id": "79677990",
    "metadata": {},
    "outputs": [
@@ -2343,7 +2343,7 @@
        "[10462 rows x 14 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "8cabfe1b",
    "metadata": {},
    "outputs": [],
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "9867dead",
    "metadata": {},
    "outputs": [],
@@ -2392,7 +2392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "0f13f5e5",
    "metadata": {},
    "outputs": [],
@@ -2404,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "d6fec931",
    "metadata": {},
    "outputs": [],
@@ -2413,6 +2413,210 @@
     "\n",
     "x_train, x_val, y_train, y_val = train_test_split(X, y , test_size= 0.2, random_state=42)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "971fae3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "99855610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_shape=x_train.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7f712372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network = keras.Sequential([\n",
+    "    layers.Dense(units=567, input_shape=[input_shape]), #input layer\n",
+    "    layers.Dropout(0.2),#to avoid overfitting\n",
+    "    layers.Activation(\"relu\"),\n",
+    "    \n",
+    "    layers.Dense(units=389), #first hidden layer\n",
+    "    layers.Dropout(0.2),#to avoid overfitting\n",
+    "    layers.Activation(\"relu\"),\n",
+    "    \n",
+    "    layers.Dense(units=360), #second hidden layer\n",
+    "    layers.Dropout(0.2),#to avoid overfitting\n",
+    "    layers.Activation(\"tanh\"),\n",
+    "    \n",
+    "    layers.Dense(units=1), # output layer\n",
+    "    #layers.Activation(\"sigmoid\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc1fbcf2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "271f8356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network.compile(loss =\"mae\", optimizer = \"adam\", metrics=\"mae\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "55d98c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "34/34 [==============================] - 2s 24ms/step - loss: 9031.1641 - mae: 9031.1641 - val_loss: 8892.8691 - val_mae: 8892.8691\n",
+      "Epoch 2/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 9019.4014 - mae: 9019.4014 - val_loss: 8880.3232 - val_mae: 8880.3232\n",
+      "Epoch 3/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 9009.3789 - mae: 9009.3789 - val_loss: 8867.8594 - val_mae: 8867.8594\n",
+      "Epoch 4/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8999.4424 - mae: 8999.4424 - val_loss: 8855.4570 - val_mae: 8855.4570\n",
+      "Epoch 5/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8989.5371 - mae: 8989.5371 - val_loss: 8843.0889 - val_mae: 8843.0889\n",
+      "Epoch 6/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8979.6553 - mae: 8979.6553 - val_loss: 8830.7432 - val_mae: 8830.7432\n",
+      "Epoch 7/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8969.7461 - mae: 8969.7461 - val_loss: 8818.4092 - val_mae: 8818.4092\n",
+      "Epoch 8/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8959.8867 - mae: 8959.8867 - val_loss: 8806.0859 - val_mae: 8806.0859\n",
+      "Epoch 9/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8950.0391 - mae: 8950.0391 - val_loss: 8793.7676 - val_mae: 8793.7676\n",
+      "Epoch 10/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8940.1514 - mae: 8940.1514 - val_loss: 8781.4561 - val_mae: 8781.4561\n",
+      "Epoch 11/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8930.3232 - mae: 8930.3232 - val_loss: 8769.1514 - val_mae: 8769.1514\n",
+      "Epoch 12/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8920.4375 - mae: 8920.4375 - val_loss: 8756.8457 - val_mae: 8756.8457\n",
+      "Epoch 13/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8910.5342 - mae: 8910.5342 - val_loss: 8744.5420 - val_mae: 8744.5420\n",
+      "Epoch 14/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8900.7871 - mae: 8900.7871 - val_loss: 8732.2471 - val_mae: 8732.2471\n",
+      "Epoch 15/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8890.9453 - mae: 8890.9453 - val_loss: 8719.9541 - val_mae: 8719.9541\n",
+      "Epoch 16/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8881.0166 - mae: 8881.0166 - val_loss: 8707.6650 - val_mae: 8707.6650\n",
+      "Epoch 17/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8871.3135 - mae: 8871.3135 - val_loss: 8695.3779 - val_mae: 8695.3779\n",
+      "Epoch 18/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8861.4561 - mae: 8861.4561 - val_loss: 8683.0889 - val_mae: 8683.0889\n",
+      "Epoch 19/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8851.6182 - mae: 8851.6182 - val_loss: 8670.8096 - val_mae: 8670.8096\n",
+      "Epoch 20/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8841.6855 - mae: 8841.6855 - val_loss: 8658.5215 - val_mae: 8658.5215\n",
+      "Epoch 21/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8831.8418 - mae: 8831.8418 - val_loss: 8646.2314 - val_mae: 8646.2314\n",
+      "Epoch 22/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8822.0303 - mae: 8822.0303 - val_loss: 8633.9492 - val_mae: 8633.9492\n",
+      "Epoch 23/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8812.2881 - mae: 8812.2881 - val_loss: 8621.6709 - val_mae: 8621.6709\n",
+      "Epoch 24/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8802.3359 - mae: 8802.3359 - val_loss: 8609.3867 - val_mae: 8609.3867\n",
+      "Epoch 25/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8792.6045 - mae: 8792.6045 - val_loss: 8597.1094 - val_mae: 8597.1094\n",
+      "Epoch 26/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8782.8350 - mae: 8782.8350 - val_loss: 8584.8320 - val_mae: 8584.8320\n",
+      "Epoch 27/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8772.9121 - mae: 8772.9121 - val_loss: 8572.5508 - val_mae: 8572.5508\n",
+      "Epoch 28/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8763.1104 - mae: 8763.1104 - val_loss: 8560.2734 - val_mae: 8560.2734\n",
+      "Epoch 29/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8753.3369 - mae: 8753.3369 - val_loss: 8548.0020 - val_mae: 8548.0020\n",
+      "Epoch 30/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8743.4531 - mae: 8743.4521 - val_loss: 8535.7227 - val_mae: 8535.7217\n",
+      "Epoch 31/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8733.4707 - mae: 8733.4707 - val_loss: 8523.4453 - val_mae: 8523.4453\n",
+      "Epoch 32/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8723.6348 - mae: 8723.6348 - val_loss: 8511.1621 - val_mae: 8511.1621\n",
+      "Epoch 33/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8714.1240 - mae: 8714.1230 - val_loss: 8498.8906 - val_mae: 8498.8906\n",
+      "Epoch 34/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8704.0039 - mae: 8704.0039 - val_loss: 8486.6133 - val_mae: 8486.6133\n",
+      "Epoch 35/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8694.4639 - mae: 8694.4639 - val_loss: 8474.3398 - val_mae: 8474.3398\n",
+      "Epoch 36/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8684.4775 - mae: 8684.4775 - val_loss: 8462.0693 - val_mae: 8462.0693\n",
+      "Epoch 37/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8674.5459 - mae: 8674.5459 - val_loss: 8449.7930 - val_mae: 8449.7930\n",
+      "Epoch 38/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8664.8652 - mae: 8664.8652 - val_loss: 8437.5186 - val_mae: 8437.5186\n",
+      "Epoch 39/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8655.0625 - mae: 8655.0625 - val_loss: 8425.2480 - val_mae: 8425.2480\n",
+      "Epoch 40/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8645.1885 - mae: 8645.1885 - val_loss: 8412.9736 - val_mae: 8412.9736\n",
+      "Epoch 41/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8635.1875 - mae: 8635.1875 - val_loss: 8400.6982 - val_mae: 8400.6982\n",
+      "Epoch 42/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8625.5898 - mae: 8625.5898 - val_loss: 8388.4277 - val_mae: 8388.4277\n",
+      "Epoch 43/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8615.6875 - mae: 8615.6875 - val_loss: 8376.1543 - val_mae: 8376.1543\n",
+      "Epoch 44/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8605.7344 - mae: 8605.7344 - val_loss: 8363.8799 - val_mae: 8363.8799\n",
+      "Epoch 45/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8596.0947 - mae: 8596.0947 - val_loss: 8351.6055 - val_mae: 8351.6055\n",
+      "Epoch 46/50\n",
+      "34/34 [==============================] - 1s 20ms/step - loss: 8586.0479 - mae: 8586.0479 - val_loss: 8339.3350 - val_mae: 8339.3359\n",
+      "Epoch 47/50\n",
+      "34/34 [==============================] - 1s 21ms/step - loss: 8576.4502 - mae: 8576.4502 - val_loss: 8327.0635 - val_mae: 8327.0635\n",
+      "Epoch 48/50\n",
+      "34/34 [==============================] - 1s 18ms/step - loss: 8566.5459 - mae: 8566.5459 - val_loss: 8314.7891 - val_mae: 8314.7891\n",
+      "Epoch 49/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8556.9229 - mae: 8556.9229 - val_loss: 8302.5244 - val_mae: 8302.5244\n",
+      "Epoch 50/50\n",
+      "34/34 [==============================] - 1s 19ms/step - loss: 8547.1123 - mae: 8547.1123 - val_loss: 8290.2549 - val_mae: 8290.2549\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = network.fit(x=x_train ,y=y_train, batch_size =250, \n",
+    "                      epochs =50,validation_data=(x_val, y_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e00d8c99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f966d667",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
