--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -6215,23 +6215,344 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3fc58788",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import mysql.connector as cn\n",
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7f7b80ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "password = os.environ.get(\"password\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b9aa1c",
+   "id": "bee56a5d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "id": "45b9aa1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>fullname</th>\n",
+       "      <th>job</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>60000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jane Smith</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>55000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bob Johnson</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>62000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Alice Brown</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Charlie Davis</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>58000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Eva White</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>52000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Frank Wilson</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Grace Miller</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>53000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Henry Jones</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Ivy Robinson</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>59000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Jack Adams</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>72000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Lily Martin</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>68000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Mike Taylor</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>63000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Nina White</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>54000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Oliver Hall</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>60000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Pam Johnson</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>66000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Quinn Davis</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>51000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Rick Evans</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>67000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Sara Clark</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>61000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Tom Parker</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Ursula Scott</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>59000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Vince Garcia</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>68000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Wendy Adams</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>52000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Xander Miller</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Yara Turner</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>55000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Zane Hill</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>71000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Ava Rodriguez</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>64000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Benjamin Brooks</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>53000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Cora Simmons</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>58000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Dylan Foster</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>69000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id         fullname      job  salary\n",
+       "0    1         John Doe       IT   60000\n",
+       "1    2       Jane Smith       HR   55000\n",
+       "2    3      Bob Johnson       IT   62000\n",
+       "3    4      Alice Brown    Sales   50000\n",
+       "4    5    Charlie Davis       HR   58000\n",
+       "5    6        Eva White    Sales   52000\n",
+       "6    7     Frank Wilson       IT   65000\n",
+       "7    8     Grace Miller    Sales   53000\n",
+       "8    9      Henry Jones       IT   70000\n",
+       "9   10     Ivy Robinson       HR   59000\n",
+       "10  11       Jack Adams  Finance   72000\n",
+       "11  12      Lily Martin  Finance   68000\n",
+       "12  13      Mike Taylor       IT   63000\n",
+       "13  14       Nina White    Sales   54000\n",
+       "14  15      Oliver Hall       HR   60000\n",
+       "15  16      Pam Johnson       IT   66000\n",
+       "16  17      Quinn Davis    Sales   51000\n",
+       "17  18       Rick Evans       IT   67000\n",
+       "18  19       Sara Clark       HR   61000\n",
+       "19  20       Tom Parker  Finance   70000\n",
+       "20  21     Ursula Scott       HR   59000\n",
+       "21  22     Vince Garcia       IT   68000\n",
+       "22  23      Wendy Adams    Sales   52000\n",
+       "23  24    Xander Miller       IT   70000\n",
+       "24  25      Yara Turner    Sales   55000\n",
+       "25  26        Zane Hill  Finance   71000\n",
+       "26  27    Ava Rodriguez       IT   64000\n",
+       "27  28  Benjamin Brooks    Sales   53000\n",
+       "28  29     Cora Simmons       HR   58000\n",
+       "29  30     Dylan Foster       IT   69000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "# this allow use to connect to a h database on the local host server of the sql\n",
+    "    connection= cn.connect(\n",
+    "        user=\"root\",\n",
+    "        password=password, \n",
+    "        database=\"h\", \n",
+    "        host=\"localhost\" )\n",
+    "\n",
+    "    # to enable to work on the database\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    qry1 = \"SELECT * FROM employees\"\n",
+    "    cursor.execute(qry1)\n",
+    "    result = cursor.fetchall()\n",
+    "    df = pd.DataFrame(result, columns=[\"id\", \"fullname\", \"job\", \"salary\"])\n",
+    "    display(df)\n",
+    "except:\n",
+    "    print(\"check for more detail\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "445f42ec",
    "metadata": {},
    "outputs": [],
@@ -6239,19 +6560,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "14c6e42d",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe39bdeb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "# this allow use to connect to a h database on the local host server of the sql\n",
+    "    connection= cn.connect(\n",
+    "        user=\"root\",\n",
+    "        password=password, \n",
+    "        database=\"h\", \n",
+    "        host=\"localhost\" )\n",
+    "\n",
+    "    # to enable to work on the database\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    qry1 = \"\"\"\n",
+    "            UPDATE employees\n",
+    "            SET department=\"hr\"\n",
+    "            where employee_id =11;\n",
+    "        \"\"\"\n",
+    "            \n",
+    "    cursor.execute(qry1)\n",
+    "    connection.commit()\n",
+    "except:\n",
+    "    print(\"check for more detail\")"
+   ]
   },
   {
    "cell_type": "code",
