--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -6156,7 +6156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "656762c8",
    "metadata": {},
    "outputs": [
@@ -6166,7 +6166,7 @@
        "['o', 'l', 'a', 't', 'a', 'n']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6183,8 +6183,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "a982df16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_numbers = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16, 17, 18, 19, 20]\n",
+    "# from all_numbers list above, seperate the even number from odd number\n",
+    "even_numbers = []\n",
+    "odd_numbers = []\n",
+    "for element in all_numbers:\n",
+    "    if element%2 == 0:\n",
+    "        even_numbers.append(element)\n",
+    "    else:\n",
+    "        odd_numbers.append(element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ba17ea34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "db146cab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd_numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0c12cc4",
+   "metadata": {},
+   "source": [
+    "# Function in  Python\n",
+    "function is a group of statements under a specific name to perform a specific task\n",
+    "1. non parament function\n",
+    "2. parameter function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "7f2d1268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how to define function in python\n",
+    "def greet():  \n",
+    "    print(\"You are welcome to our school, how may i help today?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33072978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5b372e31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are welcome to our school, how may i help today?\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87562340",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b200e7da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define function that can add any two numbers\n",
+    "\n",
+    "def add_two_num(a, b):\n",
+    "    total = a + b\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6e2d30a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_two_num(2, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01f7d2ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Anonnynous Functi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d51f16a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6192,7 +6356,135 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33072978",
+   "id": "33b22be0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a290ae5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "861bfe3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef7220da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45cdf933",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac10a6c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d48d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3ace890",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf816c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4a02b63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ddb9a58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a9dd220",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfbe636c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd14013c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e866825",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b8a454",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efc04d57",
    "metadata": {},
    "outputs": [],
    "source": []
