--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "67b1b771",
+   "id": "a2e3c56f",
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bdb23d4",
+   "id": "bf2f440d",
    "metadata": {},
    "source": [
     "# Variable and Identifier\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "26e2d425",
+   "id": "432fcd0f",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69f0454",
+   "id": "e92d7150",
    "metadata": {},
    "source": [
     "# Rules For naming Variable\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcce9c47",
+   "id": "5ba1c8b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e0fd6db",
+   "id": "01b7d4ab",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfbeb28",
+   "id": "87e5608b",
    "metadata": {},
    "source": [
     "# Operator in Pytbon\n",
@@ -114,14 +114,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22612c8e",
+   "id": "5ae0ac80",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "163533a7",
+   "id": "87f6990a",
    "metadata": {},
    "source": [
     "# Arithmetic\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea10fe8b",
+   "id": "4c1d0963",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bdcb8b83",
+   "id": "670e893b",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6b8a2fe1",
+   "id": "9dcfa6c6",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "117ec43a",
+   "id": "f4f7fc2e",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4b3c38d9",
+   "id": "c25de827",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38627445",
+   "id": "19f991f2",
    "metadata": {},
    "source": [
     "# Assignment"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e999b4",
+   "id": "4f1e4e75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "39d0392a",
+   "id": "ea5dd2ae",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bfb21ef5",
+   "id": "5ccfef93",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32cc0c9",
+   "id": "34265df7",
    "metadata": {},
    "source": [
     "# comparision\n",
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4086c1d6",
+   "id": "278a3966",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9ae0120a",
+   "id": "924fd329",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6fa53b5f",
+   "id": "9bf1623e",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "737c69bd",
+   "id": "7623e0b4",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6532f4ff",
+   "id": "0a1ea606",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b666865f",
+   "id": "18cb35ab",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c0033a",
+   "id": "6527592d",
    "metadata": {},
    "source": [
     "# Identity\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0847bd69",
+   "id": "dd65f6f0",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4ac73448",
+   "id": "67c54b4c",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08749c24",
+   "id": "ffe7127c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "11e768f7",
+   "id": "8cc33a29",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0176892e",
+   "id": "5d2599c0",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2573113b",
+   "id": "14857f83",
    "metadata": {},
    "source": [
     "# Logical Operator\n",
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a5590aa9",
+   "id": "0669af66",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3afaafa9",
+   "id": "71a6e550",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7426c0cd",
+   "id": "69541337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "032c94a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -648,7 +658,412 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a343ecc",
+   "id": "7ba456dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1bbafce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "777   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fbb50af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_name = input(\"please enter your full name \")\n",
+    "age = input(\"How are you? \")\n",
+    "address = input(\"please enter your location \")\n",
+    "print(\"Hello everyone, My name is \", full_name, \"and i am \", age, \"years old, from \", address, \"state\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "67fc2064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the first number 6\n",
+      "enter the second number 7\n",
+      "the sum of the numbers enter is  13\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int (     input(\"enter the first number \")       )\n",
+    "num2 = int ( input(\"enter the second number \") )\n",
+    "total = num1 + num2\n",
+    "print(\"the sum of the numbers enter is \", total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3a92b1fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olaitan'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"ola\" + \"itan\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "066a18b3",
+   "metadata": {},
+   "source": [
+    "# Data type in Python\n",
+    "\n",
+    "1. immutable: they are datatype that can not be modify after declearation\n",
+    "    a. number\n",
+    "    b. string\n",
+    "    c. tuple\n",
+    "    d. set   \n",
+    "2. mutable: they are datatype that can be modify after declearation\n",
+    "    a. list\n",
+    "    b. dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78303abe",
+   "metadata": {},
+   "source": [
+    "# number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b91faac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = 8839 # int\n",
+    "num2 = 3883.88 # float\n",
+    "num3 = 3 + 7j # complet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e130579e",
+   "metadata": {},
+   "source": [
+    "# string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bb7c09f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'olaitan'\n",
+    "name = \"olaitan\"\n",
+    "name = \"\"\"olaitan\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25644a1e",
+   "metadata": {},
+   "source": [
+    "# string indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3c5eaa59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'p'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"python is awesome\"\n",
+    "\n",
+    "var[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8a768a82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to return the i\n",
+    "var[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "bfab01d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'m'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var[15]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd891ba5",
+   "metadata": {},
+   "source": [
+    "# string slicing\n",
+    "\n",
+    "[index_no: positon_no: skip_no]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "123ebb22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pto'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return pto from below var\n",
+    "var = \"python is awesome\"\n",
+    "var[0:6:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf04cf98",
+   "metadata": {},
+   "source": [
+    "# method\n",
+    "strip\n",
+    "split\n",
+    "endswith\n",
+    "format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "49354d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'     olaitan   '"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"     olaitan   \"\n",
+    "var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "7f77d3d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olaitan'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "944e0842",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olaitan'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"???/olaitan>>\"\n",
+    "var.strip(\"?\").strip(\">\").strip(\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3b031f38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['python', 'is', 'awesome']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"python is awesome\"\n",
+    "var.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3e7eb400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['python', 'is', 'awesome']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"python?is?awesome\"\n",
+    "var.split(\"?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5d331ea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"olaitan\"\n",
+    "name.endswith(\"f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "630bab72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'all well that ends well  and the other story'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"all well that ends {}  and the other {}\".format(\"well\", \"story\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e6b5b9f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -656,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206403b4",
+   "id": "087c4575",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -664,183 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "032c67e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed84ff1d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d6dceb6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1710f5a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16e79ee4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34cdf4eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb2b110a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dab12b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e37f2e61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e467e19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29bc3f70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a0d2f99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "134aef75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf2f5933",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7922376b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2963edda",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d1418b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "963050f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef033e02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9e25327",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b28c723",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cbc4dbd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c208002",
+   "id": "ff70c217",
    "metadata": {},
    "outputs": [],
    "source": []
